--- a/projects/GaussianExample-URP/Packages/manifest.json
+++ b/projects/GaussianExample-URP/Packages/manifest.json
@@ -2,6 +2,8 @@
   "dependencies": {
     "com.unity.ide.rider": "3.0.31",
     "com.unity.render-pipelines.universal": "14.0.11",
+    "com.unity.xr.management": "4.5.0",
+    "com.unity.xr.oculus": "4.2.0",
     "org.nesnausk.gaussian-splatting": "file:../../../package",
     "com.unity.modules.ai": "1.0.0",
     "com.unity.modules.androidjni": "1.0.0",
