--- a/projects/GaussianExample-URP/Packages/manifest.json
+++ b/projects/GaussianExample-URP/Packages/manifest.json
@@ -1,5 +1,6 @@
 {
   "dependencies": {
+    "com.meta.xr.sdk.all": "69.0.1",
     "com.unity.ide.rider": "3.0.31",
     "com.unity.render-pipelines.universal": "14.0.11",
     "com.unity.xr.management": "4.5.0",
